// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StylelintRunner should be possible to get the original warning via getWarning 1`] = `
{
  "column": 10,
  "endColumn": 14,
  "endLine": 1,
  "fix": {
    "range": [
      12,
      13,
    ],
    "text": "ffff",
  },
  "line": 1,
  "rule": "color-hex-length",
  "severity": "error",
  "text": "Expected "#fff" to be "#ffffff" (color-hex-length)",
  "url": undefined,
}
`;

exports[`StylelintRunner should call stylelint.lint with the document path and given options 1`] = `
{
  "code": "a {}",
  "codeFilename": "/path/to/file.scss",
  "computeEditInfo": true,
  "config": {
    "customSyntax": "postcss-scss",
  },
  "configBasedir": undefined,
  "configFile": undefined,
  "customSyntax": undefined,
  "fix": true,
  "formatter": [Function],
  "ignoreDisables": undefined,
  "ignorePath": "/.stylelintignore",
  "reportDescriptionlessDisables": undefined,
  "reportInvalidScopeDisables": undefined,
  "reportNeedlessDisables": undefined,
}
`;

exports[`StylelintRunner should not get the warning with getWarning and a non-existent diagnostic 1`] = `null`;

exports[`StylelintRunner should return processed lint results from Stylelint with configured rules 1`] = `
{
  "diagnostics": [
    {
      "code": "block-no-empty",
      "codeDescription": {
        "href": "https://stylelint.io/user-guide/rules/block-no-empty",
      },
      "message": "Unexpected empty block (block-no-empty)",
      "range": {
        "end": {
          "character": 4,
          "line": 0,
        },
        "start": {
          "character": 2,
          "line": 0,
        },
      },
      "severity": 1,
      "source": "Stylelint",
    },
  ],
  "getWarning": [Function],
}
`;

exports[`StylelintRunner should return processed lint results from Stylelint without configured rules 1`] = `
{
  "diagnostics": [
    {
      "code": "CssSyntaxError",
      "message": "Unclosed block (CssSyntaxError)",
      "range": {
        "end": {
          "character": 1,
          "line": 0,
        },
        "start": {
          "character": 0,
          "line": 0,
        },
      },
      "severity": 1,
      "source": "Stylelint",
    },
  ],
  "getWarning": [Function],
}
`;

exports[`StylelintRunner should throw errors thrown by Stylelint 1`] = `"You must pass stylelint a \`files\` glob or a \`code\` string, though not both"`;
